# protobuf

./: a.json  a.py
rust/: Cargo.toml  protobuf.rs  shared.rs
rust/upb/: Cargo.toml  build.rs
rust/utf8/: Cargo.toml  utf8.rs
